--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ tokio = {version = "1.41.1", features = ["full"] }
 reqwest = { version = "0.12.9", features = ["gzip", "json"] }
 serde_json = "1.0.133"
 serde = { version = "1.0.216", features = ["derive"] }
+chrono = "0.4.39"
